--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ captures/
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
+.idea/caches/build_file_checksums.ser
+.idea/gradle.xml
+.idea/misc.xml
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
